fixed overflow issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -50,6 +50,11 @@ body {
         display: block;
         text-decoration: none;
         color: white;
+
+        &:hover {
+          color: $green-color;
+          transition: all 0.5s ease-in-out;
+        }
       }
     }
   }
@@ -578,14 +583,21 @@ footer {
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 // general styles for tablets and mobile phones😊
 @media only screen and (max-width: 1024px) {
+  body {
+    max-width: 100%;
+  }
   // class to show the nav
   .active {
-    transform: translateX(0%) !important;
-    transition: transform 1s;
+    transform: translateX(0) !important;
+    opacity: 1;
+    transition: transform 2s ease-in-out;
     right: 0;
-    // position: absolute;
     display: block;
   }
   .nav-con {
@@ -593,57 +605,47 @@ footer {
     position: relative;
     .navbar {
       position: fixed;
-      top: 0;
-      right: 0; // Initially hide the navbar off-screen
-      width: 100%;
+      max-width: 70%;
+      inset: 0;
       height: 100dvh;
-
+      max-width: 100%;
       transform: translateX(100%);
-      transition: transform 1s;
-
+      transition: transform 2s;
       display: flex;
       flex-direction: row;
       background-color: $bg-color;
-      // transition: right 0.4s ease;
       z-index: 999;
       display: none;
-      // .active {
-      //   right: 0;
-      //   display: block;
-      // }
 
       ul {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        align-content: center;
+        display: grid;
+        grid-template-rows: auto auto auto;
         display: block;
-        position: relative;
-
+        padding: 30px;
+        margin-left: 2rem;
         li {
           inset: 0;
           margin: auto;
           padding: 20px;
           margin-top: 7rem;
           margin-bottom: 3rem;
-          width: auto;
           font-size: 30px;
           text-align: center;
-          width: 159px;
+          width: auto;
           a {
             display: block;
           }
         }
         .exit-btn {
-          display: block;
+          display: inline-block;
           cursor: pointer;
-          float: right;
-          top: 0;
+          position: absolute;
+          top: 2rem;
+          right: 1.2rem;
         }
       }
     }
-    padding: 30px;
+
     .menu-btn {
       display: block;
       cursor: pointer;
@@ -655,6 +657,7 @@ footer {
   }
 
   .hero {
+    overflow: hidden;
     .left-hero-sec {
       //to switch grid position
       order: 2;
@@ -715,11 +718,20 @@ footer {
   }
   .testemonials {
     max-width: 768px;
+    overflow: hidden;
+  }
+  footer {
+    .pre-footer {
+      width: 800px;
+    }
   }
 }
 
 // for mobile phones only😎
 @media only screen and (max-width: 640px) {
+  .nav-con {
+    position: sticky;
+  }
   .hero {
     width: 310px;
     margin: auto;
@@ -860,6 +872,44 @@ footer {
       .newsletter {
         display: none;
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  footer {
+    .footer {
+      .newsletter {
+        display: none;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .nav-con {
+    position: sticky;
+  }
+  .hero,
+  .pre-testi {
+    padding-inline: 10px;
+  }
+
+  .post-hero-container {
+    .post-right-con {
+      margin-left: 1rem;
+
+      .text-3 {
+        ul {
+          margin-left: -2rem;
+        }
+      }
+    }
+  }
+  .pre-testi {
+    p {
+      padding-inline: 10px;
+      font-size: 33px;
     }
   }
 }
